# ekfutils

./: .gitignore  LICENSE  README  install_all.sh
ekfcluster/: conda_batchinstall.sh  track_cpuhours.py
ekfjobs/: setup.py
ekfjobs/ekfjobs/: email_template.empl  form_emails.py
ekflatex/: tcbyem.bst
ekflatex/example/: tcbyem.bst  test.aux  test.bbl  test.bib  test.blg  test.fdb_latexmk  test.fls  test.tex
ekfobs/: pyproject.toml  setup.py
ekfobs/ekfobs/: astroplan_moon.py  observe.py  planning.py
ekfobs/local_data/standard_stars/: palomar_blue_fluxstandards.csv  palomar_red_fluxstandards.csv
ekfparse/: setup.py
ekfparse/ekfparse/: catalogs.py  containers.py  ekfstring.py  email.py  journal_names.py  latex.py  query.py  scrape.py  strings.py  tables.py
ekfparse/ekfparse/data/: llm_places.txt
ekfphot/: setup.py
ekfphot/ekfphot/: image.py  photometry.py
ekfphys/: setup.py
ekfphys/ekfphys/: calc_kcor.py  calibrations.py  functions.py  massfunctions.py  observer.py  physical.py
ekfplot/: setup.py
ekfplot/ekfplot/: colorlists.py  colors.py  legend.py  plot.py  radio.py
ekfstats/: setup.py
ekfstats/ekfstats/: fit.py  functions.py  galstats.py  imstats.py  inference.py  math.py  physical.py  sampling.py  viztools.py
ekftrack/: setup.py
ekftrack/ekftrack/: track.py
